--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ header{
     text-align: center;
 }
 
+footer{
+    text-align: center;
+}
+
 main{
     background-color: blue;
     display: flex;
